fdo#62601 Quick search affected by invisible option from the search&replace

Disable invisible options in (ctrl+h) search-and-replace dialog if quick search (ctrl+f) is used

Change-Id: I600914ce89135e93d4808bb4a072618b00eb6f08